[package]
name = "riscan-pro"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Query RiSCAN Pro projects"
repository = "https://github.com/gadomski/riscan-pro"
readme = "README.md"
keywords = ["lidar", "riegl", "riscan"]
license = "MIT"

[dependencies]
clap = "2.26"
irb = { git = "https://github.com/gadomski/irb-rs" }
nalgebra = { version = "0.13", features = ["serde-serialize"] }
quick-error = "1.2"
scanifc = { git = "https://github.com/gadomski/rivlib-rs", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
xmltree = "0.6"

[dev-dependencies]
approx = "0.1"

[[bin]]
name = "riscan-pro"
doc = false
test = false
