[package]
name = "riscan-pro"
version = "0.2.1"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Crack open RiSCAN PRO xml project files."
documentation = "https://docs.rs/riscan-pro"
repository = "https://github.com/gadomski/riscan-pro"
readme = "README.md"
keywords = ["lidar", "riegl", "riscan"]
categories = ["science"]
license = "MIT"

[badges]
travis-ci = { repository = "gadomski/riscan-pro" }

[dependencies]
clap = { version = "2.29", features = ["yaml"] }
nalgebra = { version = "0.16.6", features = ["serde-serialize"] }
quick-error = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
xmltree = "0.6"

[dev-dependencies]
approx = "0.3.0"

[[bin]]
name = "riscan-pro"
doc = false
